fix: fix swagger routes
fix: fix crash when calling get url /api/v1/users/ and rbac is disabled
